# rustty

./: Cargo.toml  README.md
docs/: ansi-implementation.md  debugging.md  overview.md  terminal-fundamentals.md  window-system.md
scripts/: test-256-colors.sh
src/: app.rs  lib.rs  main.rs  session.rs  shell.rs
src/renderer/: app.rs  cpu.rs  input.rs  mod.rs
src/renderer/cpu/: drawing.rs  mod.rs
src/renderer/gpu/: glyph_atlas.rs  mod.rs  vertex.rs
src/renderer/gpu/shaders/: terminal.wgsl
src/terminal/: color.rs  command.rs  cursor.rs  grid.rs  mod.rs  state.rs
