[package]
name = "rustty"
version = "0.1.0"
edition = "2024"

# Library dependencies (terminal emulation only)
[dependencies]
nix = { version = "0.29", features = ["fs", "process", "term"] }
vte = "0.13"
anyhow = "1.0"

# Binary target
[[bin]]
name = "rustty"
path = "src/bin/rustty.rs"

# Binary-specific dependencies (UI frameworks)
[dependencies.winit]
version = "0.30"

[dependencies.softbuffer]
version = "0.4"

[dependencies.raqote]
version = "0.8"

[dependencies.font-kit]
version = "0.14"
