[package]
name = "rustty"
version = "0.1.0"
edition = "2024"

# Features for different UI backends
[features]
default = ["ui-cpu"]
ui-cpu = ["raqote", "softbuffer"]
ui-gpu = ["wgpu", "pollster", "bytemuck", "pathfinder_geometry"]

# Library dependencies (terminal emulation only)
[dependencies]
nix = { version = "0.29", features = ["fs", "process", "term"] }
vte = "0.13"
anyhow = "1.0"

# Shared UI dependencies (used by both CPU and GPU binaries)
winit = "0.30"
font-kit = "0.14"

# CPU rendering dependencies (optional)
raqote = { version = "0.8", optional = true }
softbuffer = { version = "0.4", optional = true }

# GPU rendering dependencies (optional)
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pathfinder_geometry = { version = "0.5", optional = true }

# Binary target: CPU rendering (default)
[[bin]]
name = "rustty"
path = "src/bin/rustty.rs"
required-features = ["ui-cpu"]

# Binary target: GPU rendering
[[bin]]
name = "rustty-gpu"
path = "src/bin/rustty_gpu.rs"
required-features = ["ui-gpu"]
